# VKR-New-

./: 5.csv  CMakeLists.txt  VKR.sln  VKR.vcxproj  VKR.vcxproj.filters  api.cpp  api.h  cyl.csv  cylinder.csv  figures.cpp  figures.h  main.cpp  planes.csv  pretty.json  randomization.cpp  randomization.h  shapes.cpp  shapes.h  sph.csv  test.csv  writefile.cpp  writefile.h
API_DLL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  API.sln  API.vcxproj  API.vcxproj.filters  CMakeCache.txt  Static_lib.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  myAPI.vcxproj  myAPI.vcxproj.filters  random.vcxproj  random.vcxproj.filters  shapes.vcxproj  shapes.vcxproj.filters  writeinfile.vcxproj  writeinfile.vcxproj.filters
build_main/: ALL_BUILD.vcxproj  API.sln  API.vcxproj  API.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
doxygen/: Doxyfile
doxygen/html/: annotated.html  api_8h.html  api_8h_source.html  class_cylinder-members.html  class_cylinder.html  class_figure-members.html  class_figure.html  class_plane-members.html  class_plane.html  class_point-members.html  class_point.html  class_sphere-members.html  class_sphere.html  classes.html  figures_8h_source.html  files.html  globals.html  globals_enum.html  globals_func.html  hierarchy.html  index.html  menudata.js  randomization_8h_source.html  structfunc_params-members.html  structfunc_params.html  structfunc_params1-members.html  structfunc_params1.html  writefile_8h_source.html
doxygen/latex/: annotated.tex  api_8h.tex  api_8h_source.tex  (+18 more)
(+10 files in other folders)
